k8s-apps/n8n/01-pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n-system
spec:
  ports:
    - port: 5432
      targetPort: 5432
