k8s-apps/n8n/02-pg-endpoints.yml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: postgres
  namespace: n8n-system
  labels:
    kubernetes.io/service-name: postgres
addressType: IPv4
ports:
  - port: 5432
    protocol: TCP
endpoints:
  - addresses:
      - "10.0.0.1"
