k8s-apps/n8n/05-n8n-service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n-web
  namespace: n8n-system
spec:
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
